Fix for tooltip not showing issue in device details page

--- a/components/device-mgt/org.wso2.carbon.device.mgt.ui/src/main/resources/jaggeryapps/devicemgt/app/units/cdmf.unit.device.view/public/css/main.css
+++ b/components/device-mgt/org.wso2.carbon.device.mgt.ui/src/main/resources/jaggeryapps/devicemgt/app/units/cdmf.unit.device.view/public/css/main.css
@@ -109,11 +109,11 @@
     overflow: hidden;
     white-space: nowrap;
 }
-.device-id a{
-    font-size: 0.4em;
+.device-info a{
     position: absolute;
     margin: 0px 5px;
     right: -5px;
+    top:0px;
 }
 .device-info h4:last-child{
 	margin: 0px;
